--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.0.3",
     "@fontsource-variable/raleway": "^5.0.9",
     "astro": "^3.0.6",
     "astro-analytics": "^2.7.0",
